@@ -1,5 +1,6 @@
 1.2.15pre3: 2004-07-xx
 	- icesound gcc 2.95.3 compile fix (Thomas Zajic)
+	- net status support for OpenBSD (Hanspeter Roth)
 
 1.2.15pre2: 2004-07-18
 	- Slovak translation (Radovan Stas)
